--- a/ECommerce514/ECommerce514.csproj
+++ b/ECommerce514/ECommerce514.csproj
@@ -13,6 +13,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Chat\Controllers\" />
+    <Folder Include="Areas\Identity\Controllers\" />
   </ItemGroup>
 
 </Project>
