--- a/ECommerce514/ECommerce514.csproj
+++ b/ECommerce514/ECommerce514.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
@@ -19,7 +20,6 @@
 
   <ItemGroup>
     <Folder Include="Areas\Chat\Controllers\" />
-    <Folder Include="Areas\Identity\Controllers\" />
   </ItemGroup>
 
 </Project>
